# dashboard-streamlit

./: .env  .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: app.py
src/.streamlit/: config.toml
src/pages/: Dashboard.py  MOCK_DATA.sql  Nova_Previsão.py  Storytelling.py
