[project]
name = "dashboard-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "dougpng",email = "nldj265@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.52.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "plotly (>=6.5.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = ""}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
